feat: seasonal catalog auto-linking, combat/safezone fixes, backpack cleanup
- /seasonal catalog save auto-detects and bakes the matching seasonal
  Rune onto the held item (material -> compatible-types match) before
  saving, and EnchantManager discovers that catalog entry on its own
  afterward -- give/roll/the seasonal set menu need no runes.yml wiring
- Seasonal Rune/set may set hidden: true to stage a season fully usable
  by admins while excluded from the player-facing preview menu until
  released
- /seasonal roll item accepts a catalog id, resolving to whichever
  ability is baked on it and rolling a random level of that ability
- Fixed a real ordering bug: EnchantManager wrapped its Runes map in
  Map.copyOf(), whose iteration order is unspecified per its javadoc,
  silently scrambling runes.yml's file order every load. Now preserved,
  so the /ce Seasonal Set grid order is actually admin-controllable by
  editing the file
- Fixed MessageFormatter not round-tripping the "spread" legacy hex
  color format (&x&R&R&G&G&B&B) LegacyComponentSerializer emits by
  default -- baked-on items with hex-gradient lore (per-letter colors)
  were rendering the raw color codes as literal text
- SafezoneGuardListener's border-push anti-exploit now only affects
  combat-tagged players, matching its entry-denial sibling rule --
  previously it nudged any player near a SafeZone edge regardless of
  combat state
- New /f admin unclaimall <Safezone|Warzone>: bulk-releases a system
  faction's whole claimed area in one DB statement, for redoing a
  SafeZone/WarZone claim from scratch
- backpacks.yml: removed the t1_basic/t2_reinforced/t3_corrupted
  tiers -- fallen_crate is now the only ordinary Backpack tier
  (war_chest, a separate proc-driven system, is unaffected)
- docs: updated custom-enchantments.md, backpacks.md, and
  factions-integration.md for all of the above

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>